AX: VoiceOver on macOS does not announce fieldset description from aria-describedby when focussing inputs https://bugs.webkit.org/show_bug.cgi?id=185246 <rdar://problem/39939028>

Reviewed by Chris Fleizach.

Source/WebCore:

Exposed the fieldset's description to its form control children.

Test: accessibility/mac/aria-describedby-fieldset.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::helpText const):

LayoutTests:

* accessibility/mac/aria-describedby-fieldset-expected.txt: Added.
* accessibility/mac/aria-describedby-fieldset.html: Added.


Canonical link: https://commits.webkit.org/201549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232331 268f45cc-cd09-0410-ab3c-d52691b4dbfc